# vocabulary-v2

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
assets/config/: languages.json  settings.json
components/: appbar.py  buttons.py  graphs.py
config/: settings.json
db/: vocabulary.db
routes/: flash_view.py  home_view.py  settings_view.py  table_view.py  translation_view.py
services/: DB_manager.py  DF_manager.py  edit_dialog.py  home_helpers.py  settings.py  translator.py
src/: main.py
src/components/: buttons.py  graphs.py
src/routes/: flash_view.py  home_view.py  table_view.py  translation_view.py
src/services/: DB_manager.py  DF_manager.py  edit_dialog.py  settings.py  translator.py
